--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,10 @@ a {
     position: absolute;
     top: 70%;
   }
+  .mainResponsive {
+    width: 50% !important;
+    margin: auto !important;
+  }
 }
 @media only screen and (min-width: 1200px) {
   .mainDiv {
@@ -84,6 +88,15 @@ a {
     position: absolute;
     top: 70%;
   }
+  .mainResponsive {
+    width: 50% !important;
+    margin: auto !important;
+  }
+}
+
+.mainResponsive {
+  width: 100%;
+  margin: auto;
 }
 .mainDiv {
   background: white;
@@ -207,4 +220,25 @@ a {
   margin: auto;
   cursor: pointer;
   justify-content: space-between;
+}
+.cardBox {
+  width: 80%;
+  background: white;
+  border-radius: 12px;
+  text-align: center;
+  padding: 30px 10px;
+  margin: auto;
+  cursor: pointer;
+}
+.swal2-title {
+  position: relative;
+  max-width: 100%;
+  margin: 0 0 0.4em;
+  padding: 0;
+  color: #595959;
+  font-size: 0.875em !important;
+  font-weight: 600;
+  text-align: center;
+  text-transform: none;
+  word-wrap: break-word;
 }
