--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ a {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 350px) {
+@media only screen and (min-width: 280px) and (max-width: 320px) {
   .historyBox {
     width: 90%;
     background: white;
@@ -41,6 +41,16 @@ a {
     outline: none;
     border-radius: 5px;
   }
+  .mTop {
+    position: relative !important;
+    top: 150px !important;
+  }
+}
+@media only screen and (min-width: 320px) and (max-width: 370px) {
+  .mTop {
+    position: relative !important;
+    top: 215px !important;
+  }
 }
 @media only screen and (max-width: 556px) {
   .historyBox {
@@ -55,6 +65,12 @@ a {
     height: 320px;
   }
 }
+@media only screen and (min-width: 556px) {
+  .mainResponsive {
+    width: 70% !important;
+    margin: auto !important;
+  }
+}
 @media only screen and (min-width: 768px) {
   .mainDiv {
     background: white;
@@ -63,6 +79,10 @@ a {
     padding: 30px 20px 30px 20px;
     position: absolute;
     top: 70%;
+  }
+  .mainResponsive {
+    width: 60% !important;
+    margin: auto !important;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -75,7 +95,7 @@ a {
     top: 70%;
   }
   .mainResponsive {
-    width: 50% !important;
+    width: 40% !important;
     margin: auto !important;
   }
 }
@@ -89,11 +109,21 @@ a {
     top: 70%;
   }
   .mainResponsive {
-    width: 50% !important;
+    width: 35% !important;
+    margin: auto !important;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .mainResponsive {
+    width: 30% !important;
     margin: auto !important;
   }
 }
 
+.mTop {
+  position: relative;
+  top: 240px;
+}
 .mainResponsive {
   width: 100%;
   margin: auto;
@@ -140,7 +170,7 @@ a {
   background: white;
   border-radius: 12px;
   text-align: center;
-  padding: 30px;
+  padding: 25px 30px;
   margin: auto;
   cursor: pointer;
   display: flex;
